v0.15.0/_sources/gallery/images/image.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/images/image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_images_image.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_image.py:


Image on a figure
=================

The :meth:`pygmt.Figure.image` method can be used to read and place an image file in
many formats (e.g., png, jpg, eps, pdf) on a figure. We must specify the filename via
the ``imagefile`` parameter or simply use the filename as the first argument. You can
also use a full URL pointing to your desired image. The ``position`` parameter allows
us to set a reference point on the map for the image.

.. GENERATED FROM PYTHON SOURCE LINES 13-33



.. image-sg:: /gallery/images/images/sphx_glr_image_001.png
   :alt: image
   :srcset: /gallery/images/images/sphx_glr_image_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    from pathlib import Path

    import pygmt

    fig = pygmt.Figure()
    fig.basemap(region=[0, 2, 0, 2], projection="X10c", frame=True)

    # Place and center ("+jCM") the image "needle.jpg" provided by GMT to the position
    # ("+g") 1/1 on the current plot, scale it to a width of 8 centimeters ("+w") and draw
    # a rectangular border around it
    fig.image(
        imagefile="https://oceania.generic-mapping-tools.org/cache/needle.jpg",
        position="g1/1+w8c+jCM",
        box=True,
    )

    fig.show()

    # Clean up the downloaded image in the current directory
    Path("needle.jpg").unlink()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.765 seconds)


.. _sphx_glr_download_gallery_images_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: image.ipynb <image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: image.py <image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: image.zip <image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
